# gtnh-reactor-planner-revive

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: GITHUB_MIGRATION.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/domain/: codecs.ts  components.ts  defaults.ts  types.ts
src/sim/: csv.ts  runtime.ts  simulator.ts  stepper.ts
src/state/: infoBarStore.ts  selectionStore.ts
src/ui/: ChartsPanel.tsx  ConfigPanel.tsx  EventsPanel.tsx  InfoBar.tsx  MetricCard.tsx  Palette.tsx  ReactorGrid.tsx  SpeedButton.tsx
src/utils/: download.ts  format.ts
src/worker/: simulationWorker.ts
tests/: codecs.test.ts  simulator.test.ts
